# hide_email

./: Cargo.toml  README.md  capsule.toml
contracts/hide_email/: Cargo.toml
contracts/hide_email/src/: entry.rs
cycle_test/: Cargo.toml
tests/: Cargo.toml
tests/src/: lib.rs  tests.rs
