[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-testtool = "0.6.1"
ckb-gadgets = { package= "zkp-gadgets",git = "https://github.com/sec-bit/ckb-zkp.git"}
ckb-r1cs = { package= "zkp-r1cs",git = "https://github.com/sec-bit/ckb-zkp.git"}
ckb-groth16 = { package= "zkp-groth16",git = "https://github.com/sec-bit/ckb-zkp.git"}
ark-ff = { version = "0.2", features = [ "asm" ] }
ark-serialize = { version = "0.2", features = [ "derive" ] }
ark-bls12-381 = { version = "0.2", default-features = false, features = [ "curve" ] }
ark-bn254 = { version = "0.2", default-features = false, features = [ "curve" ] }
sha2 = "0.9"
hex = "0.4.3"
substring = {package = "secret_string", git = "https://github.com/RequiemOfSoul/substring-zkp", rev = "6784c37af831b31e7a4ae6b1d0ebed47e5ed725e"}

[dependencies.ark-std]
version = "0.2.0"
default-features = false