[package]
name = "hide_email"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.7.1"
ark-bls12-381 = { version = "0.2", default-features = false, features = [ "curve" ] }
ark-bn254 = { version = "0.2", default-features = false, features = [ "curve" ] }
ark-serialize = { version = "0.2", default-features = false }
ark-ff = { version = "0.2", default-features = false, features = [ "asm" ] }

[dependencies.zkp-groth16]
git = "https://github.com/sec-bit/ckb-zkp"
branch = "dev"
default-features = false